--- a/terraform/tools/ingress-nginx/ingress.yaml
+++ b/terraform/tools/ingress-nginx/ingress.yaml
@@ -3,9 +3,8 @@ kind: Ingress
 metadata:
   name: ingress-nginx
   annotations:
-    kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: letsencrypt-prod
-
+    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
 spec:
   tls:
     - hosts:
@@ -29,3 +28,4 @@ spec:
                 name: default-backend-svc
                 port:
                   number: 80
+  ingressClassName: nginx
