--- a/terraform/tools/ingress-nginx/values.yaml
+++ b/terraform/tools/ingress-nginx/values.yaml
@@ -15,6 +15,7 @@ controller:
   config:
     use-proxy-protocol: "true"
     use-http2: "true"
+    ssl-redirect: "true"
   # -- Annotations to be added to the controller config configuration configmap.
   configAnnotations: {}
   # -- Will add custom headers before sending traffic to backends according to https://github.com/kubernetes/ingress-nginx/tree/main/docs/examples/customization/custom-headers
@@ -210,80 +211,6 @@ controller:
   # -- Node tolerations for server scheduling to nodes with taints
   ## Ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/
   ##
-  tolerations: []
-  #  - key: "key"
-  #    operator: "Equal|Exists"
-  #    value: "value"
-  #    effect: "NoSchedule|PreferNoSchedule|NoExecute(1.6 only)"
-
-  # -- Affinity and anti-affinity rules for server scheduling to nodes
-  ## Ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity
-  ##
-  affinity: {}
-  # # An example of preferred pod anti-affinity, weight is in the range 1-100
-  # podAntiAffinity:
-  #   preferredDuringSchedulingIgnoredDuringExecution:
-  #   - weight: 100
-  #     podAffinityTerm:
-  #       labelSelector:
-  #         matchExpressions:
-  #         - key: app.kubernetes.io/name
-  #           operator: In
-  #           values:
-  #           - '{{ include "ingress-nginx.name" . }}'
-  #         - key: app.kubernetes.io/instance
-  #           operator: In
-  #           values:
-  #           - '{{ .Release.Name }}'
-  #         - key: app.kubernetes.io/component
-  #           operator: In
-  #           values:
-  #           - controller
-  #       topologyKey: kubernetes.io/hostname
-
-  # # An example of required pod anti-affinity
-  # podAntiAffinity:
-  #   requiredDuringSchedulingIgnoredDuringExecution:
-  #   - labelSelector:
-  #       matchExpressions:
-  #       - key: app.kubernetes.io/name
-  #         operator: In
-  #         values:
-  #         - '{{ include "ingress-nginx.name" . }}'
-  #       - key: app.kubernetes.io/instance
-  #         operator: In
-  #         values:
-  #         - '{{ .Release.Name }}'
-  #       - key: app.kubernetes.io/component
-  #         operator: In
-  #         values:
-  #         - controller
-  #     topologyKey: kubernetes.io/hostname
-
-  # -- Topology spread constraints rely on node labels to identify the topology domain(s) that each Node is in.
-  ## Ref: https://kubernetes.io/docs/concepts/workloads/pods/pod-topology-spread-constraints/
-  ##
-  topologySpreadConstraints: []
-  # - labelSelector:
-  #     matchLabels:
-  #       app.kubernetes.io/name: '{{ include "ingress-nginx.name" . }}'
-  #       app.kubernetes.io/instance: '{{ .Release.Name }}'
-  #       app.kubernetes.io/component: controller
-  #   matchLabelKeys:
-  #   - pod-template-hash
-  #   topologyKey: topology.kubernetes.io/zone
-  #   maxSkew: 1
-  #   whenUnsatisfiable: ScheduleAnyway
-  # - labelSelector:
-  #     matchLabels:
-  #       app.kubernetes.io/name: '{{ include "ingress-nginx.name" . }}'
-  #       app.kubernetes.io/instance: '{{ .Release.Name }}'
-  #       app.kubernetes.io/component: controller
-  #   matchLabelKeys:
-  #   - pod-template-hash
-  #   topologyKey: kubernetes.io/hostname
-  #   maxSkew: 1
-  #   whenUnsatisfiable: ScheduleAnyway
 
   # -- `terminationGracePeriodSeconds` to avoid killing pods before we are ready
   ## wait up to five minutes for the drain of connections
