--- a/demo/frontend-app.yaml
+++ b/demo/frontend-app.yaml
@@ -1,20 +1,19 @@
-# test-app.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: default-backend
+  name: frontend-app
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: default-backend
+      app: frontend-app
   template:
     metadata:
       labels:
-        app: default-backend
+        app: frontend-app
     spec:
       containers:
-        - name: default-backend
+        - name: frontend-app
           image: paulbouwer/hello-kubernetes:1.10
           ports:
             - containerPort: 8080
@@ -22,11 +21,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: default-backend-svc
+  name: frontend-app-svc
 spec:
   type: ClusterIP
   ports:
     - port: 80
       targetPort: 8080
   selector:
-    app: default-backend
+    app: frontend-app
