--- a/terraform/tools/ingress-nginx/backend-ingress.yaml
+++ b/terraform/tools/ingress-nginx/backend-ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: private-ingress
+  name: backend-ingress
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
     nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
@@ -9,7 +9,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: internal.wouritech.com
+    - host: api.wouritech.com
       http:
         paths:
           - path: /
@@ -17,5 +17,5 @@ spec:
             backend:
               service:
                 name: internal-app-svc
-                port: 
+                port:
                   number: 80
