--- a/terraform/tools/ingress-nginx/frontend-ingress.yaml
+++ b/terraform/tools/ingress-nginx/frontend-ingress.yaml
@@ -1,21 +1,28 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: private-ingress
+  name: frontend-ingress
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
     nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
     nginx.ingress.kubernetes.io/enable-opentelemetry: "true"
 spec:
   ingressClassName: nginx
+  tls:
+    - hosts:
+        - wouritech.com
+        - api.wouritech.com
+        - www.wouritech.com
+        - internal.wouritech.com
+      secretName: tls-secret
   rules:
-    - host: internal.wouritech.com
+    - host: wouritech.com
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: internal-app-svc
-                port: 
+                name: frontend-app-svc
+                port:
                   number: 80
