--- a/terraform/tools/ingress-nginx/frontend-ingress.yaml
+++ b/terraform/tools/ingress-nginx/frontend-ingress.yaml
@@ -4,17 +4,15 @@ metadata:
   name: frontend-ingress
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
-    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
+#    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
     nginx.ingress.kubernetes.io/enable-opentelemetry: "true"
 spec:
   ingressClassName: nginx
   tls:
     - hosts:
         - wouritech.com
-        - api.wouritech.com
         - www.wouritech.com
-        - internal.wouritech.com
-      secretName: tls-secret
+      secretName: frontend-tls-secret
   rules:
     - host: wouritech.com
       http:
