--- a/terraform/tools/ingress-nginx/private-ingress.yaml
+++ b/terraform/tools/ingress-nginx/private-ingress.yaml
@@ -4,10 +4,14 @@ metadata:
   name: private-ingress
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
-    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
+#    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
     nginx.ingress.kubernetes.io/enable-opentelemetry: "true"
 spec:
   ingressClassName: nginx
+  tls:
+    - hosts:
+        - internal.wouritech.com
+      secretName: internal-tls-secret
   rules:
     - host: internal.wouritech.com
       http:
