--- a/terraform/tools/ingress-nginx/private-ingress.yaml
+++ b/terraform/tools/ingress-nginx/private-ingress.yaml
@@ -4,8 +4,6 @@ metadata:
   name: private-ingress
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
-#    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
-    nginx.ingress.kubernetes.io/enable-opentelemetry: "true"
 spec:
   ingressClassName: nginx
   tls:
@@ -20,6 +18,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: internal-app-svc
+                name: internal-svc
                 port: 
                   number: 80
