--- a/terraform/tools/ingress-nginx/backend-ingress.yaml
+++ b/terraform/tools/ingress-nginx/backend-ingress.yaml
@@ -4,6 +4,10 @@ metadata:
   name: backend-ingress
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
+    nginx.ingress.kubernetes.io/enable-cors: "true"
+    nginx.ingress.kubernetes.io/cors-allow-origin: "https://wouritech.com"
+    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
+    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
 spec:
   ingressClassName: nginx
   tls:
