--- a/terraform/tools/monitoring/prometheus.yaml
+++ b/terraform/tools/monitoring/prometheus.yaml
@@ -9,28 +9,28 @@ grafana:
 #      url: http://loki-loki-distributed-gateway.monitoring:80
 #      access: proxy
 #      isDefault: false
-  persistence:
-    enabled: true
-    type: pvc
-    storageClassName: do-block-storage
-    name: grafana-storage
-    size: 10Gi
-    accessModes:
-      - ReadWriteMany
-    finalizers:
-      - kubernetes.io/pvc-protection
+#  persistence:
+#    enabled: true
+#    type: pvc
+#    storageClassName: do-block-storage
+#    name: grafana-storage
+#    size: 10Gi
+#    accessModes:
+#      - ReadWriteMany
+#    finalizers:
+#      - kubernetes.io/pvc-protection
 
-prometheus:
-  prometheusSpec:
-    storageSpec:
-      volumeClaimTemplate:
-        spec:
-          name: prometheus-storage
-          storageClassName: "do-block-storage"
-          accessModes: ["ReadWriteMany"]
-          resources:
-            requests:
-              storage: "10Gi"
+#prometheus:
+#  prometheusSpec:
+#    storageSpec:
+#      volumeClaimTemplate:
+#        spec:
+#          name: prometheus-storage
+#          storageClassName: "do-block-storage"
+#          accessModes: ["ReadWriteMany"]
+#          resources:
+#            requests:
+#              storage: "10Gi"
 
 nodeExporter:
   enable: true
@@ -44,14 +44,14 @@ nodeExporter:
     windows:
       enabled: false
 
-alertmanager:
-  alertmanagerSpec:
-    storage:
-      volumeClaimTemplate:
-        spec:
-          storageClassName: "do-block-storage"
-          accessModes: ["ReadWriteOnce"]
-          name: alertmanager-storage
-          resources:
-            requests:
-              storage: "10Gi"
+#alertmanager:
+#  alertmanagerSpec:
+#    storage:
+#      volumeClaimTemplate:
+#        spec:
+#          storageClassName: "do-block-storage"
+#          accessModes: ["ReadWriteOnce"]
+#          name: alertmanager-storage
+#          resources:
+#            requests:
+#              storage: "10Gi"
