--- a/terraform/tools/ingress-nginx/private-ingress.yaml
+++ b/terraform/tools/ingress-nginx/private-ingress.yaml
@@ -15,10 +15,17 @@ spec:
     - host: internal.wouritech.com
       http:
         paths:
+          - path: /prometheus
+            pathType: Prefix
+            backend:
+              service:
+                name: prometheus-kube-prometheus-prometheus
+                port:
+                  number: 9090
           - path: /
             pathType: Prefix
             backend:
               service:
                 name: internal-svc
-                port: 
+                port:
                   number: 80
