--- a/terraform/tools/ingress-nginx/values.yaml
+++ b/terraform/tools/ingress-nginx/values.yaml
@@ -13,15 +13,20 @@ controller:
     https: 443
 
   config:
-    use-proxy-protocol: "true"  # Enable PROXY protocol support only when ssl is already issued
-    use-http2: "true" # Enable HTTP/2 support only when ssl is already issued
-    ssl-redirect: "true" # Enable ssl redirect only when ssl is already issued
+#    use-proxy-protocol: "true"  # Enable PROXY protocol support only when ssl is already issued
+#    use-http2: "true" # Enable HTTP/2 support only when ssl is already issued
+#    ssl-redirect: "true" # Enable ssl redirect only when ssl is already issued
     allow-snippet-annotations: "true"
-    enable-modsecurity: "true"
+#    enable-modsecurity: "true"
     log-format-escape-json: "true"
     log-format-upstream: '{"time":"$time_iso8601","remote_addr":"$remote_addr","proxy_protocol_addr":"$proxy_protocol_addr","proxy_protocol_port":"$proxy_protocol_port","x_forward_for":"$proxy_add_x_forwarded_for","remote_user":"$remote_user","host":"$host","request_method":"$request_method","request_uri":"$request_uri","server_protocol":"$server_protocol","status":$status,"request_time":$request_time,"request_length":$request_length,"bytes_sent":$bytes_sent,"upstream_name":"$proxy_upstream_name","upstream_addr":"$upstream_addr","upstream_uri":"$uri","upstream_response_length":$upstream_response_length,"upstream_response_time":$upstream_response_time,"upstream_status":$upstream_status,"http_referrer":"$http_referer","http_user_agent":"$http_user_agent","http_cookie":"$http_cookie","http_device_id":"$http_x_device_id","http_customer_id":"$http_x_customer_id"}'
-    ssl-ciphers: "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:DHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA:ECDHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES256-SHA256:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:DES-CBC3-SHA"
-    ssl-protocols: "TLSv1.2 TLSv1.3"
+#    ssl-ciphers: "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA
+#  -AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA
+#  -AES256-GCM-SHA384:DHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128
+#  -SHA:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA:ECDHE-RSA
+#  -AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES256-SHA256:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256
+#  -SHA256:AES128-SHA:AES256-SHA:DES-CBC3-SHA"
+#    ssl-protocols: "TLSv1.2 TLSv1.3"
 
   networkPolicy:
     enabled: false
@@ -84,13 +89,13 @@ controller:
     # -- Annotations to be added to the external controller service. See `controller.service.internal.annotations` for annotations to be added to the internal controller service.
     annotations:
       service.beta.kubernetes.io/do-loadbalancer-name: "nginx-loadbalancer"
-      service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
-      service.beta.kubernetes.io/do-loadbalancer-tls-passthrough: "true"
-      service.beta.kubernetes.io/do-loadbalancer-algorithm: "round_robin"
-      service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https: "true"
-      service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
-      service.beta.kubernetes.io/do-loadbalancer-http-port: "80"
-      service.beta.kubernetes.io/do-loadbalancer-tls-ports: "443"
+#      service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
+#      service.beta.kubernetes.io/do-loadbalancer-tls-passthrough: "true"
+#      service.beta.kubernetes.io/do-loadbalancer-algorithm: "round_robin"
+#      service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https: "true"
+#      service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
+#      service.beta.kubernetes.io/do-loadbalancer-http-port: "80"
+#      service.beta.kubernetes.io/do-loadbalancer-tls-ports: "443"
     # -- Labels to be added to both controller services.
     labels: {}
     # -- Type of the external controller service.
