--- a/terraform/tools/monitoring/prometheus.yaml
+++ b/terraform/tools/monitoring/prometheus.yaml
@@ -3,6 +3,44 @@ grafana:
   sidecar:
     datasources:
       enabled: true
+  ingress:
+    ## If true, Grafana Ingress will be created
+    ##
+    enabled: true
+
+    ## IngressClassName for Grafana Ingress.
+    ## Should be provided if Ingress is enable.
+    ##
+    ingressClassName: nginx
+
+    ## Annotations for Grafana Ingress
+    ##
+    annotations:
+      cert-manager.io/cluster-issuer: letsencrypt-prod
+
+    ## Labels to be added to the Ingress
+    ##
+    labels: { }
+
+    ## Hostnames.
+    ## Must be provided if Ingress is enable.
+    ##
+    # hosts:
+    #   - grafana.domain.com
+    hosts:
+      - grafana.wouritech.com
+
+    ## Path for grafana ingress
+    path: /
+
+    ## TLS configuration for grafana Ingress
+    ## Secret must be manually created in the namespace
+    ##
+    tls:
+      - secretName: grafana-general-tls
+        hosts:
+         - grafana.wouritech.com
+
 #  additionalDataSources:
 #    - name: loki
 #      type: loki
