--- a/terraform/tools/monitoring/prometheus.yaml
+++ b/terraform/tools/monitoring/prometheus.yaml
@@ -4,38 +4,14 @@ grafana:
     datasources:
       enabled: true
   ingress:
-    ## If true, Grafana Ingress will be created
-    ##
     enabled: true
-
-    ## IngressClassName for Grafana Ingress.
-    ## Should be provided if Ingress is enable.
-    ##
     ingressClassName: nginx
-
-    ## Annotations for Grafana Ingress
-    ##
     annotations:
       cert-manager.io/cluster-issuer: letsencrypt-prod
-
-    ## Labels to be added to the Ingress
-    ##
     labels: { }
-
-    ## Hostnames.
-    ## Must be provided if Ingress is enable.
-    ##
-    # hosts:
-    #   - grafana.domain.com
     hosts:
       - grafana.wouritech.com
-
-    ## Path for grafana ingress
     path: /
-
-    ## TLS configuration for grafana Ingress
-    ## Secret must be manually created in the namespace
-    ##
     tls:
       - secretName: grafana-general-tls
         hosts:
@@ -58,7 +34,29 @@ grafana:
 #    finalizers:
 #      - kubernetes.io/pvc-protection
 
-#prometheus:
+prometheus:
+  ingress:
+    enabled: true
+    ingressClassName: nginx
+    annotations:
+      cert-manager.io/cluster-issuer: letsencrypt-prod
+    labels: { }
+    ## Redirect ingress to an additional defined port on the service
+    # servicePort: 8081
+    hosts:
+      - prometheus.wouritech.com
+    paths:
+      - /
+
+    ## For Kubernetes >= 1.18 you should specify the pathType (determines how Ingress paths should be matched)
+    ## See https://kubernetes.io/blog/2020/04/02/improvements-to-the-ingress-api-in-kubernetes-1.18/#better-path-matching-with-path-types
+    # pathType: ImplementationSpecific
+
+    tls:
+      - secretName: prometheus-general-tls
+        hosts:
+         - prometheus.wouritech.com
+
 #  prometheusSpec:
 #    storageSpec:
 #      volumeClaimTemplate:
