full working version

--- a/terraform/tools/monitoring/prometheus.yaml
+++ b/terraform/tools/monitoring/prometheus.yaml
@@ -23,16 +23,16 @@ grafana:
       url: http://loki-loki-distributed-gateway.monitoring:80
       access: proxy
       isDefault: false
-#  persistence:
-#    enabled: true
-#    type: pvc
-#    storageClassName: do-block-storage
-#    name: grafana-storage
-#    size: 10Gi
-#    accessModes:
-#      - ReadWriteMany
-#    finalizers:
-#      - kubernetes.io/pvc-protection
+  persistence:
+    enabled: true
+    type: pvc
+    storageClassName: csi-s3
+    name: grafana-storage
+    size: 10Gi
+    accessModes:
+      - ReadWriteMany
+    finalizers:
+      - kubernetes.io/pvc-protection
 
 prometheus:
   ingress:
