--- a/terraform/tools/monitoring/prometheus.yaml
+++ b/terraform/tools/monitoring/prometheus.yaml
@@ -23,14 +23,14 @@ grafana:
       url: http://loki-loki-distributed-gateway.monitoring:80
       access: proxy
       isDefault: false
-  persistence:
-    enabled: true
-    type: pvc
-    storageClassName: do-block-storage
-    name: grafana-storage
-    size: 5Gi
-    accessModes:
-      - ReadWriteOnce
+#  persistence:
+#    enabled: true
+#    type: pvc
+#    storageClassName: csi-s3
+#    name: grafana-storage
+#    size: 5Gi
+#    accessModes:
+#      - ReadWriteMany
 
 prometheus:
   ingress:
@@ -49,16 +49,28 @@ prometheus:
          - prometheus.wouritech.com
 
   prometheusSpec:
+    additionalScrapeConfigs:
+      - job_name: 'qdrant'
+        metrics_path: /metrics
+        static_configs:
+          - targets: ['qdrant.qdrant:6333']
+            labels:
+              host: qdrant
+        metric_relabel_configs:
+          - source_labels: ['__name__']
+            target_label: '__name__'
+            regex: '(.*)'
+            action: 'replace'
+            replacement: 'qdrant_$1'
+
     storageSpec:
       volumeClaimTemplate:
-        metadata:
-          name: prometheus-storage
         spec:
-          storageClassName: "do-block-storage"
-          accessModes: ["ReadWriteOnce"]
+          storageClassName: "csi-s3"
+          accessModes: ["ReadWriteMany"]
           resources:
             requests:
-              storage: "10Gi"
+              storage: "5Gi"
 
 nodeExporter:
   enable: true
